# wq_new

./: .gitignore  README.md  pyproject.toml
alpha_gen/: __init__.py
alpha_gen/api/: __init__.py  ai_client.py  wq_client.py
alpha_gen/core/: __init__.py  alpha_generator.py  alpha_polisher.py  alpha_simulator.py  alpha_submitter.py
alpha_gen/models/: __init__.py  alpha.py
alpha_gen/utils/: __init__.py  config.py  logging.py  validators.py
scripts/: generate_alphas.py  mine_expressions.py  polish_alphas.py  submit_alphas.py
